# robotpy-bazel

./: .bazelrc  BUILD  MODULE.bazel  requirements.in  requirements_lock.txt  requirements_lock_3_13.txt
src/: BUILD  robot.py
src/examples/: BUILD  chatter.launch.py  hello_world.cc  hello_world_lib.cc  hello_world_lib.h  listener.py  multi_platform_support_test.py  talker.py  talker_test.py
tools/: BUILD  bazel  format_py.py  python_version.py
tools/cpp/: BUILD  cc_toolchain_config.bzl
tools/cpp/jetson_linux/: BUILD  aarch64_glibc_stable_2022-08-1.BUILD  aarch64_glibc_stable_2022-08-1_ar  aarch64_glibc_stable_2022-08-1_as  aarch64_glibc_stable_2022-08-1_cpp  aarch64_glibc_stable_2022-08-1_gcc  aarch64_glibc_stable_2022-08-1_ld  aarch64_glibc_stable_2022-08-1_nm  aarch64_glibc_stable_2022-08-1_objcopy  aarch64_glibc_stable_2022-08-1_objdump  aarch64_glibc_stable_2022-08-1_strip
